# image_clustering_algorithm

./: .gitignore  Pipfile  README.md  app.ipynb  image_clustering_algorithm.code-workspace  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
src/: app.ipynb  image_clustering_algorithm.py  pyproject.toml
