[project]
name = "image-clustering-algorithm"
version = "0.1.0"
description = "Cluster images based on similarity using machine learning techniques."
requires-python = ">3.8"

dependencies = [
    "torch==2.0.1",
    "torchvision==0.15.2",
    "notebook==6.5.4",
    "facenet-pytorch==2.5.3",
    "scikit-learn==1.2.2",
    "tqdm==4.65.0",
    "ipywidgets==8.0.6",
    "ipympl==0.9.3"
]